Start of work to support Markdown as alternate syntax